# learning-home

./: .gitignore
about-thread/: README.md  build.gradle.kts  settings.gradle.kts
changhwan-utils/: pyproject.toml
codebuild/: .terraform.lock.hcl  _backend.tf  _shared_vars.tf
coding-test-home/: .python-version  pyvenv.cfg
coding-test-home/baekjoon/: main.py
coding-test-home/palindrome/: main.py
coding-test-home/reverse-string/: main.py
coding-test-home/음계/: main.py
coding-test-home/이진 탐색/: main.py
docker/mysql/: docker-compose.yml
dynamodb/: .gitignore
dynamodb/event/: build.gradle.kts
java-home/: settings.gradle
js-home/: memo.md  memo2.md  test-2.js  test-3.js  test.js
kotlin-home/: settings.gradle.kts
kotlin-home/app/: build.gradle.kts
lambda-example/: build.gradle.kts  template.yml
lambda-example/.aws-sam/: build.toml
prac-shell-script/: init.sh
pytest-home/: main.py  pyproject.toml
python-home/: main.py
python-home/lambda/: lambda-test.py
python-home/warlus_operator/: main.py
sam/: README.md
sam/gradle-lambda-test/: README.md  template.yaml
sam/lambda-alias-test/: README.md  samconfig.toml  template.yaml
sam/multi-stage-test/: README.md  template.yaml
sam/sam-app/: template.yaml  y
sam/sam-app-2/: y
sam/sam-app-3/: template.yaml
sam/sam-test-app/: README.md  samconfig.toml  template.yaml
slack-api-home/deploy-notification/: main.py
terraform/: .gitignore
terraform/codebuild/: main.tf
terraform/ec2/: .terraform.lock.hcl  main.tf
terraform/module-prac/: main.tf  outputs.tf
(+87 files in other folders)
