[tool.poetry]
name = "changhwan-utils"
version = "0.1.0"
description = ""
authors = ["chnaghwan"]
license = "MIT 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.2"
requests = "^2.28.1"
black = "^22.6.0"
flake8 = "^5.0.4"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
